--- a/css/main.css
+++ b/css/main.css
@@ -640,10 +640,10 @@ global content
   height: 100vh;
   background-size: cover;
   background-position: center;
+  color: var(--white);
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--white);
 }
 
 .banner-slide .overlay {
@@ -3676,11 +3676,6 @@ responsive
 }
 
 @media screen and (max-width: 575px) {
-  /* banner */
-  .banner-content {
-    margin-top: 30px;
-  }
-
   .content-box {
     background: none;
     backdrop-filter: none;
@@ -3691,7 +3686,8 @@ responsive
 @media screen and (max-width: 480px) {
   /* banner */
   .banner-wrapper {
-    padding: 30px 0;
+    padding: 30px 0 !important;
+    font-size: 238px;
   }
 
   .content-box {
@@ -6513,30 +6509,6 @@ textarea:focus {
   backdrop-filter: blur(2px);
 }
 
-/* Content box */
-.banner-content {
-  position: relative;
-  color: #fff;
-  padding: 25px 35px;
-  max-width: 650px;
-  border-radius: 16px;
-}
-
-/* Title */
-.banner-content h1 {
-  font-size: 42px;
-  line-height: 1.2;
-  font-weight: 800;
-  margin-bottom: 10px;
-}
-
-/* Short description */
-.banner-content p {
-  font-size: 18px;
-  font-weight: 300;
-  opacity: 0.95;
-}
-
 /* ===========================
    RESPONSIVE BANNER
 =========================== */
@@ -6545,41 +6517,6 @@ textarea:focus {
 @media (max-width: 992px) {
   .job-banner {
     height: 300px;
-  }
-  .banner-content h1 {
-    font-size: 34px;
-  }
-  .banner-content {
-    padding: 20px 28px;
-  }
-}
-
-/* Mobile */
-@media (max-width: 600px) {
-  .job-banner {
-    height: 260px;
-  }
-  .banner-content {
-    max-width: 100%;
-    padding: 18px 20px;
-    margin: 0 10px;
-  }
-  .banner-content h1 {
-    font-size: 28px;
-  }
-  .banner-content p {
-    font-size: 15px;
-  }
-}
-
-/* Small mobile */
-@media (max-width: 420px) {
-  .banner-content {
-    padding: 14px 16px;
-    border-radius: 12px;
-  }
-  .banner-content h1 {
-    font-size: 24px;
   }
 }
 
